2006-01-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\normalturnoffactive): restore setting of
	active \ to \normalbackslash.
	(\onepageout): restore call to \normalturnoffactive.
	Otherwise, if a page break happens at the wrong time, the active
	\ will result in writing an actual \ character,
	instead of {\tt \backslashcurfont }.
	Report from Kurt.Hornik@wu-wien.ac.at, 6 Jan 2006 14:38:38 +0100.
	[test idxback-exts]

2005-12-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (node, Node Names): pxref Node Line Requirements,
	about restrictions on characters in node names.

2005-12-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\pdfurl): make @/ a no-op.
	Report from Kurt Hornik, 23 Dec 2005 13:17:56 +0100.

	* util/texi2dvi (no_file_line_error): new control,
	with option --no-line-error to set it.  Wybo Dekker's mk program
	wants to parse TeX's original error messages.
	(run_tex): obey it.

2005-12-22  Akim Demaille  <akim@epita.fr>

	Implement --mostly-clean, improve the detection of aux files.
	* util/texi2dvi ($action): New.
	(--mostly-clean): New.
	(cd_orig): New.
	(generated_files_get, aux_file_p, index_file_p, xref_files_p):
	New.
	(get_index_files): Remove, replaced by the previous functions.
	(get_xref_files): Rename as...
	(xref_files_get): this.
	(run_index): Use generated_files_get.
	(clean): Rename as...
	(mostly_clean): this.
	Strengthen.
	($t2ddir): Try to have a `local' absolute file name, not a fully
	absolute one to avoid very very long file names.
	* util/texi2dvi.test: Exercise --mostly-clean.

2005-12-20  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (key): DELETE, not DEL, per rms.

2005-12-19  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (run_conversion): Rename as...
	(run_core_conversion): this.
	(compile): New.
	This is the former main program.
	(clean): New.
	Use it.
	(language): Compute it in the main loop.

2005-11-18  Akim Demaille  <akim@epita.fr>

	Factor the handling of list of directories.